2006-08-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (do_key_sample): Check for terminal support of 
	term->filled_polygon before using it to draw a key sample. Fixes
	segfault in epson driver (and probably others) if a filled area
	is assigned an RGB color.
	Bugfix.

2006-08-13  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Clarify the argument required by exists(), and
	provide an example of passing it a string variable containing the
	name of another udv (possibly useful in conjunction with macros).

2006-08-13  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/doc2tex.c (puttex): Don't split index words at - or _; replace
	_ by space.

2006-08-11  Ethan A Merritt  <merritt@u.washington.edu>

	* term/PostScript/prologue.ps: Remove comment with my name in it.
	Further tweak to the PatternBgnd macro.

2006-08-12  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/PostScript/cp437.ps term/PostScript/cp850.ps 
	term/PostScript/koi8r.ps: Remove superfluous C comment characters.

	* term/PostScript/cp852.ps: Remove my info.

2006-08-11  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* term/post.trm: Fix preprocessor logic for !defined(GNUPLOT_PS_DIR).

2006-08-11  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/PostScript/prologue.ps: Replace multiple spaces by a tabulator.

	* docs/doc2tex.c (puttex): Remove superfluous spaces around \index{x}.

2006-08-11 Bastian Maerkisch  <bmaerkisch@web.de>

	* config/makefile.nt: Define GNUPLOT_PS_DIR to use external PostScript
	prologue files.

2006-08-11  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Some comments in the help for bind and mouse
	variables. 

2006-08-10  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc
	Sync Japanese documentation to recent changes in English files.
	(rev.1.381) 08Aug2006

2006-08-09  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm term/PostScript/prologue.ps: Move the pattern-fill